# arosem

./: .gitignore  dependencies.rosinstall  planner_output.txt
aro_exploration/: CMakeLists.txt  package.xml  setup.py
aro_exploration/config/: cmd_vel_mux.yaml  control.yaml  slam.yaml  slam_full.yaml
aro_exploration/config/localization/: apriltags.yaml  costs.yaml  costs_icp.yaml  detector_easy.yaml  detector_hard.yaml  detector_medium.yaml  detector_perfect.yaml  solver.yaml  solver_fast.yaml  task_test1.yaml  task_test2.yaml
aro_exploration/data/control/: test_paths.csv  test_paths_gt.csv
aro_exploration/env-hooks/: 50.aro.sh.in
aro_exploration/homeworks/: create_hw01_package.sh  create_hw02_package.sh  create_hw03_package.sh  create_hw04_package.sh  create_hw05_package.sh  create_hw06_package.sh  create_hw07_package.sh  create_sw01_package.sh  hw02.files  hw03.files  hw04.files  hw05.files  hw06.files  hw07.files  sw01.files  utils.bash
aro_exploration/launch/: reactive_control.launch  real_robot.launch  real_robot_joy_teleop.launch  real_robot_key_teleop.launch  sim_robot.launch
aro_exploration/launch/control/: aro_control.launch  aro_control_dependencies.launch  aro_control_evaluation.launch  aro_control_real.launch  aro_control_rviz.launch  aro_control_sim.launch
aro_exploration/launch/evaluation/: run_eval.launch
aro_exploration/launch/exploration/: aro_exploration.launch  aro_exploration_dependencies.launch  aro_exploration_real.launch  aro_exploration_rviz.launch  aro_exploration_sim.launch  record.launch
aro_exploration/launch/frontier/: aro_frontier.launch  aro_frontier_dependencies.launch  aro_frontier_planning_rviz.launch  aro_frontier_planning_test_local.launch  aro_frontier_real.launch  aro_frontier_sim.launch
aro_exploration/launch/localization/: apriltags.launch  aro_localization.launch  aro_localization_dependencies.launch  aro_localization_real.launch  aro_localization_rviz.launch  aro_localization_sim.launch  record.launch
aro_exploration/launch/planning/: aro_planning.launch  aro_planning_dependencies.launch  aro_planning_real.launch  aro_planning_sim.launch  aro_planning_test_local.launch  test_planner.launch
aro_exploration/launch/slam/: aro_slam.launch  aro_slam_bag.launch  aro_slam_real.launch  aro_slam_rviz.launch  aro_slam_sim.launch  cloud_filter.launch  occupancy_mapper.launch  record.launch  tf_metrics.launch
aro_exploration/nodes/control/: path_follower.py  path_follower_evaluator.py  utils.py
aro_exploration/nodes/evaluation/: run_eval.py
aro_exploration/nodes/exploration/: explorer.py
aro_exploration/nodes/frontier/: frontier.py  frontier_evaluate.py
aro_exploration/nodes/localization/: aro_localization
aro_exploration/nodes/planning/: evaluate  planner.py  planner_evaluate.py
aro_exploration/nodes/slam/: cloud_filter  eval_slam  icp_slam  occupancy_mapper  tf_metrics
aro_exploration/rviz/: control.rviz  exploration.rviz  frontier_planning.rviz  frontier_test.rviz  localization.rviz  slam.rviz
aro_exploration/src/aro_control/: utils.py
aro_exploration/src/aro_exploration/: utils.py
aro_exploration/src/aro_localization/: factor_graph.py  least_squares.py  odom_integrator.py  utils.py
aro_exploration/src/aro_slam/: clouds.py  icp.py  icp_io.py  occupancy.py  utils.py
aro_msgs/: CMakeLists.txt  package.xml
aro_msgs/action/: FollowPath.action
aro_msgs/msg/: SectorDistances.msg
aro_reactive_control/: CMakeLists.txt  package.xml
aro_reactive_control/data/: ref_solution_0.txt  ref_solution_1.txt  scan_data_0.bag  scan_data_1.bag
aro_reactive_control/launch/: evaluator_hw01.launch  evaluator_hw02.launch  hw01_eval.launch  hw01_sim.launch  hw02_eval.launch  hw02_sim.launch
aro_reactive_control/rviz/: reactive_control_sim.rviz
aro_reactive_control/scripts/: publisher.py  reactive_control_evaluator.py  reactive_controller.py  scan_processing_evaluator.py  subscriber.py
aro_sim/: CMakeLists.txt  package.xml
aro_sim/config/init_poses/: aro_easy_3.txt  aro_maze_1.txt  aro_maze_2.txt  aro_maze_8.txt  aro_medium_1.txt  aro_medium_2.txt  house.txt  lab_e130.txt  stage_1.txt  stage_2.txt  stage_3.txt  stage_4.txt  world.txt
aro_sim/config/joy_mappings/: README.md  mac_utm.yaml  steam_deck.yaml  usb-0810_USB_Gamepad-joystick.yaml  usb-Logitech_Logitech_Cordless_RumblePad_2-joystick.yaml  usb-Logitech_Wireless_Gamepad_F710_SERIAL-joystick.yaml  usb-Microsoft_Controller_SERIAL-joystick.yaml  usb-Raspberry_Pi_Pico_SERIAL-joystick.yaml  usb-Raspberry_Pi_Pico_rcjoy-if02-joystick.yaml  usb-©Microsoft_Corporation_Controller_SERIAL-joystick.yaml  usb-©Microsoft_Xbox_360_Wireless_Receiver_for_Windows_SERIAL-joystick.yaml
aro_sim/config/marker_poses/aro_easy_1/: 1.launch  2.launch  3.launch
aro_sim/config/marker_poses/aro_easy_2/: 1.launch  2.launch  3.launch
aro_sim/config/marker_poses/aro_eval_1/: 2.launch  3.launch
aro_sim/config/marker_poses/aro_eval_2/: 1.launch  2.launch
aro_sim/config/marker_poses/aro_hallway_1/: 1.launch
aro_sim/config/marker_poses/aro_maze_1/: 2.launch  3.launch  4.launch
aro_sim/doc/: aro_sim.tex
aro_sim/launch/: aro_sim.launch  base_sim.launch  empty_world.launch  sim_with_markers.launch  teleop_joy.launch  teleop_keyboard.launch
aro_sim/models/Apriltag16_05_00004/: model.sdf
aro_sim/models/Apriltag16_05_00005/: model.sdf
aro_sim/models/Apriltag16_05_00006/: model.sdf
aro_sim/models/Apriltag16_05_00007/: model.sdf
aro_sim/models/hallway_3/: model.config  model.sdf
aro_sim/models/robocop_maze/: model.config  model.sdf
aro_sim/models/wall_0_1/: model.config  model.sdf
aro_sim/models/wall_1_0/: model.config  model.sdf
aro_sim/rviz/: base_sim.rviz
aro_sim/urdf/: reactive_control_maze.urdf  turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro  turtlebot3_burger_rgbd.gazebo.xacro  turtlebot3_burger_rgbd.urdf.xacro
aro_sim/worlds/: aro_easy_1.world  aro_easy_2.world  aro_eval_1.world  aro_eval_2.world  aro_hallway_1.world  aro_maze_1.world  aro_maze_2.world  aro_maze_8.world  aro_medium_1.world  aro_medium_2.world  lab_e130.world
(+45 files in other folders)
