<?xml version="1.0"?>
<package format="2">
  <name>aro_reactive_control</name>
  <version>1.2024.0</version>
  <description>HW1 and HW2 package for Autonomous Robotics course</description>

  <maintainer email="vit.kratky@fel.cvut.cz">Vit Kratky</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>scipy</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
